@@ -543,7 +543,7 @@
       <dd>
     </dl>
   </dd>
-  <dt><dfn>grayscale(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
+  <dt><dfn>grayscale( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
   <dd>
     Converts the input image to grayscale. The passed parameter defines the proportion
     of the conversion. A value of 100% is completely grayscale. A value of 0% leaves the
@@ -552,7 +552,7 @@
     The markup equivalent of this function is <a href="#grayscaleEquivalent">given below</a>.
   </dd>
 
-  <dt><dfn>sepia(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
+  <dt><dfn>sepia( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
   <dd>
     Converts the input image to sepia. The passed parameter defines the proportion
     of the conversion. A value of 100% is completely sepia. A value of 0 leaves the
@@ -561,7 +561,7 @@
     The markup equivalent of this function is <a href="#sepiaEquivalent">given below</a>.
   </dd>
 
-  <dt><dfn>saturate(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
+  <dt><dfn>saturate( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
   <dd>
     Saturates the input image. The passed parameter defines the proportion
     of the conversion. A value of 0% is completely un-saturated. A value of 100% leaves the
@@ -571,7 +571,7 @@
     The markup equivalent of this function is <a href="#saturateEquivalent">given below</a>.
   </dd>
 
-  <dt><dfn>hue-rotate(&lt;angle&gt;)</dfn></dt>
+  <dt><dfn>hue-rotate( &lt;angle&gt; )</dfn></dt>
   <dd>
     Applies a hue rotation on the input image. The passed parameter defines the 
     number of degrees around the color circle the input samples will be adjusted.
@@ -581,7 +581,7 @@
     The markup equivalent of this function is <a href="#huerotateEquivalent">given below</a>.
   </dd>
 
-  <dt><dfn>invert(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
+  <dt><dfn>invert( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
   <dd>
     Inverts the samples in the input image. The passed parameter defines the proportion
     of the conversion. A value of 100% is completely inverted. A value of 0% leaves the
@@ -590,7 +590,7 @@
     The markup equivalent of this function is <a href="#invertEquivalent">given below</a>.
   </dd>
 
-  <dt><dfn>opacity(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
+  <dt><dfn>opacity( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
   <dd>
     Applies transparency to the samples in the input image. The passed parameter defines the proportion
     of the conversion. A value of 0% is completely transparent. A value of 100% leaves the
@@ -603,7 +603,7 @@
     </p>
   </dd>
 
-  <dt><dfn>brightness(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
+  <dt><dfn>brightness( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
   <dd>
     Applies a linear multiplier to input image, making it appear more
     or less bright.
@@ -614,7 +614,7 @@
     The markup equivalent of this function is <a href="#brightnessEquivalent">given below</a>.
   </dd>
 
-  <dt><dfn>contrast(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
+  <dt><dfn>contrast( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
   <dd>
     Adjusts the contrast of the input.
     A value of ''0%'' will create an image that is completely gray. A value of ''100%'' leaves the
@@ -623,7 +623,7 @@
     The markup equivalent of this function is <a href="#contrastEquivalent">given below</a>.
   </dd>
 
-  <dt><dfn>blur(&lt;length&gt;)</dfn></dt>
+  <dt><dfn>blur( &lt;length&gt; )</dfn></dt>
   <dd>
     Applies a Gaussian blur to the input image.
     The passed parameter (the radius) defines the value of the standard deviation to the Gaussian function.
@@ -633,7 +633,7 @@
     <p class=issue>The FXTF is looking into distinguish between vertical and horizontal blur radii.</p>
   </dd>
 
-  <dt><dfn>drop-shadow([&lt;length&gt;{2,3} && &lt;color&gt;?]#)</dfn></dt>
+  <dt><dfn>drop-shadow( &lt;length&gt;{2,3} && &lt;color&gt;? )</dfn></dt>
   <dd>
     Applies a drop shadow effect to the input image. A drop shadow is
     effectively a blurred, offset version of the input image's alpha mask
@@ -644,7 +644,7 @@
     below</a>.
   </dd>
   
-  <dt><dfn>custom(IDENT [, &lt;param&gt;]*)</dfn></dt>
+  <dt><dfn>custom( IDENT [, &lt;param&gt;]* )</dfn></dt>
   <dd>
      References a custom filter at-rule by the given identifier. See <a
      href="#custom-filter">Custom Filter Function</a> for details.
