@@ -10,7 +10,7 @@
 
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-07-04 name=dcterms.date>
+  <meta content=2013-07-09 name=dcterms.date>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -33,14 +33,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 4 July 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 9 July 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dev.w3.org/fxtf/filters/">http://dev.w3.org/fxtf/filters/</a>
-     <!--http://www.w3.org/TR/2013/WD-filters-20130704/-->
+     <!--http://www.w3.org/TR/2013/WD-filters-20130709/-->
 
     <dt>Latest version:
 
@@ -997,23 +997,12 @@
    Otherwise, the list of functions are applied in the order provided.
 
   <pre class=prod><dfn
-   id=ltfilter-functiongt><var>&lt;filter-function&gt;</var></dfn> = <a
-   href="#grayscaleltnumbergt-ltpercentagegt"><var>grayscale(&lt;number&gt; | &lt;percentage&gt;)</var></a>
- | <a
-   href="#sepialtnumbergt-ltpercentagegt"><var>sepia(&lt;number&gt; | &lt;percentage&gt;)</var></a> | <a
-   href="#saturateltnumbergt-ltpercentagegt"><var>saturate(&lt;number&gt; | &lt;percentage&gt;)</var></a>
- | <a
-   href="#hue-rotateltanglegt"><var>hue-rotate(&lt;angle&gt;)</var></a> | <a
-   href="#invertltnumbergt-ltpercentagegt"><var>invert(&lt;number&gt; | &lt;percentage&gt;)</var></a>
- | <a
-   href="#opacityltnumbergt-ltpercentagegt"><var>opacity(&lt;number&gt; | &lt;percentage&gt;)</var></a> | <a
-   href="#brightnessltnumbergt-ltpercentagegt"><var>brightness(&lt;number&gt; | &lt;percentage&gt;)</var></a>
- | <a
-   href="#contrastltnumbergt-ltpercentagegt"><var>contrast(&lt;number&gt; | &lt;percentage&gt;)</var></a> | <a
-   href="#blurltlengthgt"><var>blur(&lt;length&gt;)</var></a> | <a
-   href="#drop-shadowltlengthgt23-ltcolorgt"><var>drop-shadow([&lt;length&gt;{2,3} && &lt;color&gt;?]#)</var></a>
- | <a
-   href="#customident-ltparamgt"><var>custom(IDENT [, &lt;param&gt;]*)</var></a></pre>
+   id=ltfilter-functiongt><var>&lt;filter-function&gt;</var></dfn> = <var>grayscale(&lt;number&gt; | &lt;percentage&gt;)</var>
+ | <var>sepia(&lt;number&gt; | &lt;percentage&gt;)</var> | <var>saturate(&lt;number&gt; | &lt;percentage&gt;)</var>
+ | <var>hue-rotate(&lt;angle&gt;)</var> | <var>invert(&lt;number&gt; | &lt;percentage&gt;)</var>
+ | <var>opacity(&lt;number&gt; | &lt;percentage&gt;)</var> | <var>brightness(&lt;number&gt; | &lt;percentage&gt;)</var>
+ | <var>contrast(&lt;number&gt; | &lt;percentage&gt;)</var> | <var>blur(&lt;length&gt;)</var> | <var>drop-shadow([&lt;length&gt;{2,3} && &lt;color&gt;?]#)</var>
+ | <var>custom(IDENT [, &lt;param&gt;]*)</var></pre>
 
   <pre class=prod><dfn
    id=ltchild-selectorgt>&lt;child-selector&gt;</dfn> = select(<a
@@ -1058,8 +1047,8 @@
      <dd>
     </dl>
 
-   <dt><dfn id=grayscaleltnumbergt-ltpercentagegt>grayscale(&lt;number&gt; |
-    &lt;percentage&gt;)</dfn>
+   <dt><dfn id=grayscale-ltnumbergt-ltpercentagegt->grayscale( &lt;number&gt;
+    | &lt;percentage&gt; )</dfn>
 
    <dd> Converts the input image to grayscale. The passed parameter defines
     the proportion of the conversion. A value of 100% is completely
@@ -1068,8 +1057,8 @@
     missing, a value of 100% is used. The markup equivalent of this function
     is <a href="#grayscaleEquivalent">given below</a>.
 
-   <dt><dfn id=sepialtnumbergt-ltpercentagegt>sepia(&lt;number&gt; |
-    &lt;percentage&gt;)</dfn>
+   <dt><dfn id=sepia-ltnumbergt-ltpercentagegt->sepia( &lt;number&gt; |
+    &lt;percentage&gt; )</dfn>
 
    <dd> Converts the input image to sepia. The passed parameter defines the
     proportion of the conversion. A value of 100% is completely sepia. A
@@ -1078,8 +1067,8 @@
     100% is used. The markup equivalent of this function is <a
     href="#sepiaEquivalent">given below</a>.
 
-   <dt><dfn id=saturateltnumbergt-ltpercentagegt>saturate(&lt;number&gt; |
-    &lt;percentage&gt;)</dfn>
+   <dt><dfn id=saturate-ltnumbergt-ltpercentagegt->saturate( &lt;number&gt; |
+    &lt;percentage&gt; )</dfn>
 
    <dd> Saturates the input image. The passed parameter defines the
     proportion of the conversion. A value of 0% is completely un-saturated. A
@@ -1089,7 +1078,7 @@
     of 100% is used. The markup equivalent of this function is <a
     href="#saturateEquivalent">given below</a>.
 
-   <dt><dfn id=hue-rotateltanglegt>hue-rotate(&lt;angle&gt;)</dfn>
+   <dt><dfn id=hue-rotate-ltanglegt->hue-rotate( &lt;angle&gt; )</dfn>
 
    <dd> Applies a hue rotation on the input image. The passed parameter
     defines the number of degrees around the color circle the input samples
@@ -1099,8 +1088,8 @@
     markup equivalent of this function is <a
     href="#huerotateEquivalent">given below</a>.
 
-   <dt><dfn id=invertltnumbergt-ltpercentagegt>invert(&lt;number&gt; |
-    &lt;percentage&gt;)</dfn>
+   <dt><dfn id=invert-ltnumbergt-ltpercentagegt->invert( &lt;number&gt; |
+    &lt;percentage&gt; )</dfn>
 
    <dd> Inverts the samples in the input image. The passed parameter defines
     the proportion of the conversion. A value of 100% is completely inverted.
@@ -1109,8 +1098,8 @@
     100% is used. The markup equivalent of this function is <a
     href="#invertEquivalent">given below</a>.
 
-   <dt><dfn id=opacityltnumbergt-ltpercentagegt>opacity(&lt;number&gt; |
-    &lt;percentage&gt;)</dfn>
+   <dt><dfn id=opacity-ltnumbergt-ltpercentagegt->opacity( &lt;number&gt; |
+    &lt;percentage&gt; )</dfn>
 
    <dd> Applies transparency to the samples in the input image. The passed
     parameter defines the proportion of the conversion. A value of 0% is
@@ -1128,8 +1117,8 @@
      of the value of the filter function, which may result in a more
      transparent content.
 
-   <dt><dfn id=brightnessltnumbergt-ltpercentagegt>brightness(&lt;number&gt;
-    | &lt;percentage&gt;)</dfn>
+   <dt><dfn id=brightness-ltnumbergt-ltpercentagegt->brightness(
+    &lt;number&gt; | &lt;percentage&gt; )</dfn>
 
    <dd> Applies a linear multiplier to input image, making it appear more or
     less bright. A value of ‘<code class=css>0%</code>’ will create an
@@ -1140,8 +1129,8 @@
     is used. The markup equivalent of this function is <a
     href="#brightnessEquivalent">given below</a>.
 
-   <dt><dfn id=contrastltnumbergt-ltpercentagegt>contrast(&lt;number&gt; |
-    &lt;percentage&gt;)</dfn>
+   <dt><dfn id=contrast-ltnumbergt-ltpercentagegt->contrast( &lt;number&gt; |
+    &lt;percentage&gt; )</dfn>
 
    <dd> Adjusts the contrast of the input. A value of ‘<code
     class=css>0%</code>’ will create an image that is completely gray. A
@@ -1151,7 +1140,7 @@
     markup equivalent of this function is <a href="#contrastEquivalent">given
     below</a>.
 
-   <dt><dfn id=blurltlengthgt>blur(&lt;length&gt;)</dfn>
+   <dt><dfn id=blur-ltlengthgt->blur( &lt;length&gt; )</dfn>
 
    <dd> Applies a Gaussian blur to the input image. The passed parameter (the
     radius) defines the value of the standard deviation to the Gaussian
@@ -1162,9 +1151,8 @@
     <p class=issue>The FXTF is looking into distinguish between vertical and
      horizontal blur radii.
 
-   <dt><dfn
-    id=drop-shadowltlengthgt23-ltcolorgt>drop-shadow([&lt;length&gt;{2,3} &&
-    &lt;color&gt;?]#)</dfn>
+   <dt><dfn id=drop-shadow-ltlengthgt23-ltcolorgt->drop-shadow(
+    &lt;length&gt;{2,3} && &lt;color&gt;? )</dfn>
 
    <dd> Applies a drop shadow effect to the input image. A drop shadow is
     effectively a blurred, offset version of the input image's alpha mask
@@ -1174,7 +1162,8 @@
     that spread values are not allowed.) The markup equivalent of this
     function is <a href="#dropshadowEquivalent">given below</a>.
 
-   <dt><dfn id=customident-ltparamgt>custom(IDENT [, &lt;param&gt;]*)</dfn>
+   <dt><dfn id=custom-ident-ltparamgt->custom( IDENT [, &lt;param&gt;]*
+    )</dfn>
 
    <dd> References a custom filter at-rule by the given identifier. See <a
     href="#custom-filter">Custom Filter Function</a> for details.
@@ -16157,14 +16146,14 @@ interface <b>SVGFEBlendElement</b> : <a
         href="#ltblend-modegt0"
         title="section 12.4."><strong>12.4.</strong></a>
 
-       <li>blur(&lt;length&gt;), <a href="#blurltlengthgt"
+       <li>blur( &lt;length&gt; ), <a href="#blur-ltlengthgt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>bounding client rect, <a href="#bounding-client-rect"
         title="section 4."><strong>4.</strong></a>
 
-       <li>brightness(&lt;number&gt; | &lt;percentage&gt;), <a
-        href="#brightnessltnumbergt-ltpercentagegt"
+       <li>brightness( &lt;number&gt; | &lt;percentage&gt; ), <a
+        href="#brightness-ltnumbergt-ltpercentagegt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>&lt;child-selector&gt;, <a href="#ltchild-selectorgt"
@@ -16188,21 +16177,22 @@ interface <b>SVGFEBlendElement</b> : <a
        <li>&lt;compound-selector&gt;, <a href="#ltcompound-selectorgt"
         title="section 5."><strong>5.</strong></a>
 
-       <li>contrast(&lt;number&gt; | &lt;percentage&gt;), <a
-        href="#contrastltnumbergt-ltpercentagegt"
+       <li>contrast( &lt;number&gt; | &lt;percentage&gt; ), <a
+        href="#contrast-ltnumbergt-ltpercentagegt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>&lt;custom-filter-type&gt;, <a href="#ltcustom-filter-typegt"
         title="section 11.1."><strong>11.1.</strong></a>
 
-       <li>custom(IDENT [, &lt;param&gt;]*), <a href="#customident-ltparamgt"
+       <li>custom( IDENT [, &lt;param&gt;]* ), <a
+        href="#custom-ident-ltparamgt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>‘<code class=css>detached</code>’, <a href="#detached"
         title="section 11.5."><strong>11.5.</strong></a>
 
-       <li>drop-shadow([&lt;length&gt;{2,3} && &lt;color&gt;?]#), <a
-        href="#drop-shadowltlengthgt23-ltcolorgt"
+       <li>drop-shadow( &lt;length&gt;{2,3} && &lt;color&gt;? ), <a
+        href="#drop-shadow-ltlengthgt23-ltcolorgt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>feBlend, <a href="#feblend"
@@ -16328,8 +16318,8 @@ interface <b>SVGFEBlendElement</b> : <a
        <li><var>&lt;geometry-shape&gt;</var>, <a href="#ltgeometry-shapegt"
         title="section 11.5."><strong>11.5.</strong></a>
 
-       <li>grayscale(&lt;number&gt; | &lt;percentage&gt;), <a
-        href="#grayscaleltnumbergt-ltpercentagegt"
+       <li>grayscale( &lt;number&gt; | &lt;percentage&gt; ), <a
+        href="#grayscale-ltnumbergt-ltpercentagegt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>grid(&lt;integer&gt;{1,2} || [ detached | attached ]?), <a
@@ -16339,14 +16329,14 @@ interface <b>SVGFEBlendElement</b> : <a
        <li>group_rule_body, <a href="#group_rule_body"
         title="section 11.2."><strong>11.2.</strong></a>
 
-       <li>hue-rotate(&lt;angle&gt;), <a href="#hue-rotateltanglegt"
+       <li>hue-rotate( &lt;angle&gt; ), <a href="#hue-rotate-ltanglegt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>&lt;integer&gt;, <a href="#ltintegergt"
         title="section 11.5."><strong>11.5.</strong></a>
 
-       <li>invert(&lt;number&gt; | &lt;percentage&gt;), <a
-        href="#invertltnumbergt-ltpercentagegt"
+       <li>invert( &lt;number&gt; | &lt;percentage&gt; ), <a
+        href="#invert-ltnumbergt-ltpercentagegt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>lighting-color, <a href="#lighting-color"
@@ -16397,8 +16387,8 @@ interface <b>SVGFEBlendElement</b> : <a
        <li>object bounding box units, <a href="#object-bounding-box-units"
         title="section 4."><strong>4.</strong></a>
 
-       <li>opacity(&lt;number&gt; | &lt;percentage&gt;), <a
-        href="#opacityltnumbergt-ltpercentagegt"
+       <li>opacity( &lt;number&gt; | &lt;percentage&gt; ), <a
+        href="#opacity-ltnumbergt-ltpercentagegt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>&lt;param&gt;, <a href="#ltparamgt"
@@ -16413,12 +16403,12 @@ interface <b>SVGFEBlendElement</b> : <a
        <li>renderer, <a href="#renderer"
         title="section 19."><strong>19.</strong></a>
 
-       <li>saturate(&lt;number&gt; | &lt;percentage&gt;), <a
-        href="#saturateltnumbergt-ltpercentagegt"
+       <li>saturate( &lt;number&gt; | &lt;percentage&gt; ), <a
+        href="#saturate-ltnumbergt-ltpercentagegt-"
         title="section 5."><strong>5.</strong></a>
 
-       <li>sepia(&lt;number&gt; | &lt;percentage&gt;), <a
-        href="#sepialtnumbergt-ltpercentagegt"
+       <li>sepia( &lt;number&gt; | &lt;percentage&gt; ), <a
+        href="#sepia-ltnumbergt-ltpercentagegt-"
         title="section 5."><strong>5.</strong></a>
 
        <li>src, <a href="#src"
