@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-07-09  Dirk Schulze  <dschulze@adobe.com>
+- Just support one shadow item for drop-shadow in the first level.
+
 2013-07-04  Dirk Schulze  <dschulze@adobe.com>
 - Clarify that filter functions operate in sRGB
 - Clarify interpolation between filter functions.
